UI Fix: Values button is not visible when writing in text box

--- a/src/main/public/css/style2.css
+++ b/src/main/public/css/style2.css
@@ -215,10 +215,6 @@ body {
     color: #555555;
 }
 
-#field-value {
-    position: relative;
-}
-
 .alternate-value {
     position: absolute;
     top: 0;
